--- a/css/sass/helpers/_variables.scss
+++ b/css/sass/helpers/_variables.scss
@@ -1,4 +1,8 @@
 $red: #EF473A;
 $pink: #EF4379;
+$black: #232323;
+$gray: #D2D2D2;
 
-$gradient: linear-gradient(90deg, $red 0%, $pink 100%)
+$gradient: linear-gradient(90deg, $red 0%, $pink 100%);
+
+$shadow: 0px 0px 42px 3px rgba(0, 0, 0, 0.15);
