--- a/css/sass/components/_fonts.scss
+++ b/css/sass/components/_fonts.scss
@@ -5,6 +5,8 @@
          url("../assets/fonts/Impact.ttf") format("ttf");
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
 h1 {
     font-family: Impact;
     color: #fff;
@@ -12,7 +14,13 @@ h1 {
     font-size: 40px;
 }
 
+h2 {
+    font-family: Impact;
+    color: $black;
+    font-size: 22px;
+}
+
 p {
     font-family: Raleway;
-    color: white;
+    color: $black;
 }
