--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -6,3 +6,5 @@
 @import './components/fonts';
 @import './components/buttons';
 @import './components/mockup';
+@import './components/coach';
+@import './components/divisions';
