--- a/css/sass/components/_header.scss
+++ b/css/sass/components/_header.scss
@@ -1,27 +1,38 @@
 header {
-    height: 85vh;
+    height: 829px;
     width: 100%;
     position: relative;
+    background-image: url(../assets/img/bg_2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
 
-    .background {
+    .logo {
+        position: absolute;
+        width: 100px;
+        top: 30px;
+        left: 30px;
+
         img {
-            display: block;
             width: 100%;
+            display: block;
+        }
+    }
+
+    img {
+        &.illustration {
+            display: block;
+            width: 15%;
             position: absolute;
             z-index: -1;
-
-            &.illustration {
-                width: 15%;
-                left: 35%;
-                top: 20%;
-            }
+            left: 35%;
+            top: 20%;
         }
     }
 
     .title {
         width: 30%;
         margin-left: 20%;
-        height: 100%;
+        height: 75%;
         display: flex;
         justify-content: center;
         flex-direction: column;
