--- a/css/sass/components/_mockup.scss
+++ b/css/sass/components/_mockup.scss
@@ -1,7 +1,8 @@
 .mockup {
     display: flex;
     align-items: center;
-    padding-top: 200px;
+    padding-bottom: 40px;
+    padding-top: 10px;
 
     > div {
         width: 50%;
