--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,31 @@
   margin: 0; }
 
 header {
-  height: 85vh;
+  height: 829px;
   width: 100%;
-  position: relative; }
-  header .background img {
-    display: block;
-    width: 100%;
+  position: relative;
+  background-image: url(../assets/img/bg_2.png);
+  background-size: cover;
+  background-repeat: no-repeat; }
+  header .logo {
     position: absolute;
-    z-index: -1; }
-    header .background img.illustration {
-      width: 15%;
-      left: 35%;
-      top: 20%; }
+    width: 100px;
+    top: 30px;
+    left: 30px; }
+    header .logo img {
+      width: 100%;
+      display: block; }
+  header img.illustration {
+    display: block;
+    width: 15%;
+    position: absolute;
+    z-index: -1;
+    left: 35%;
+    top: 20%; }
   header .title {
     width: 30%;
     margin-left: 20%;
-    height: 100%;
+    height: 75%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -82,7 +91,8 @@ p {
 .mockup {
   display: flex;
   align-items: center;
-  padding-top: 200px; }
+  padding-bottom: 40px;
+  padding-top: 10px; }
   .mockup > div {
     width: 50%; }
     .mockup > div:last-child {
@@ -137,3 +147,47 @@ p {
         left: -30px;
         top: 50%;
         transform: translateY(-50%); }
+
+.coach {
+  position: relative;
+  height: 577px;
+  display: flex;
+  align-items: center;
+  background-image: url(../assets/img/shape_arrow.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center; }
+  .coach img {
+    width: 150px;
+    left: 10%;
+    top: 10%;
+    position: absolute; }
+  .coach div.wrapper {
+    width: 60%;
+    margin-left: 40%; }
+    .coach div.wrapper p {
+      margin-top: 20px; }
+    .coach div.wrapper .btn {
+      margin-top: 60px;
+      width: 220px; }
+      .coach div.wrapper .btn p {
+        margin-top: 0; }
+
+.division {
+  height: 600px;
+  background: url(../assets/img/shape_division.png);
+  background-size: 50%;
+  background-position-x: right;
+  background-repeat: no-repeat;
+  position: relative;
+  display: flex;
+  align-items: center; }
+  .division .container img {
+    position: absolute;
+    right: -80px;
+    top: 0;
+    width: 570px; }
+  .division .container .title {
+    width: 70%; }
+    .division .container .title p {
+      margin-top: 20px; }
