--- a/css/sass/components/_mockup.scss
+++ b/css/sass/components/_mockup.scss
@@ -21,6 +21,7 @@
             box-shadow: $shadow;
             border: 1px solid $gray;
             overflow: hidden;
+            background-color: #fff;
         }
 
         article {
