--- a/css/sass/components/_default.scss
+++ b/css/sass/components/_default.scss
@@ -2,3 +2,10 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    background-image: url(../assets/img/bg_2.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top center;
+}
