--- a/css/sass/components/_feedback.scss
+++ b/css/sass/components/_feedback.scss
@@ -1,4 +1,6 @@
 .feedback {
+    position: relative;
+
     h2 {
         text-align: center;
     }
@@ -9,5 +11,59 @@
         margin: 90px auto;
         border: 3px solid $pink;
         border-radius: 26px;
+
+        .swiper-wrapper {
+            .swiper-slide {
+                display: flex;
+                align-items: center;
+
+                .avi {
+                    height: 120px;
+                    width: 120px;
+                    margin-left: 15px;
+
+                    img {
+                        max-width: 100%;
+                        max-height: 100%;
+                        display: block;
+                    }
+                }
+
+                .comment {
+                    width: calc(100% - 130px);
+                    line-height: 1.5;
+                    margin-left: 15px;
+                }
+            }
+        }
+    }
+
+    .quotes {
+        position: absolute;
+        margin: 0 auto;
+        width: 60%;
+        top: 34%;
+
+        span {
+            position: absolute;
+            display: block;
+            width: 60px;
+            height: 100px;
+            background-image: url(../assets/pictos/quote.svg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            margin: 0 auto;
+
+            &:first-child {
+                left: 0;
+                right: 35%;
+            }
+
+            &:last-child {
+                left: 55%;
+                right: 0;
+                top: 150px;
+            }
+        }
     }
 }
