--- a/css/sass/components/_header.scss
+++ b/css/sass/components/_header.scss
@@ -1,10 +1,7 @@
 header {
-    height: 829px;
+    height: 95vh;
     width: 100%;
     position: relative;
-    background-image: url(../assets/img/bg_2.png);
-    background-size: cover;
-    background-repeat: no-repeat;
 
     .logo {
         position: absolute;
