--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,16 @@
   padding: 0;
   margin: 0; }
 
-header {
-  height: 829px;
-  width: 100%;
-  position: relative;
+body {
   background-image: url(../assets/img/bg_2.png);
-  background-size: cover;
-  background-repeat: no-repeat; }
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top center; }
+
+header {
+  height: 95vh;
+  width: 100%;
+  position: relative; }
   header .logo {
     position: absolute;
     width: 100px;
@@ -106,7 +109,8 @@ p {
       border-radius: 60px;
       box-shadow: 0px 0px 42px 3px rgba(0, 0, 0, 0.15);
       border: 1px solid #D2D2D2;
-      overflow: hidden; }
+      overflow: hidden;
+      background-color: #fff; }
     .mockup > div article {
       width: 85%;
       position: relative;
@@ -181,7 +185,8 @@ p {
   background-repeat: no-repeat;
   position: relative;
   display: flex;
-  align-items: center; }
+  align-items: center;
+  overflow: hidden; }
   .division .container img {
     position: absolute;
     right: -80px;
@@ -192,12 +197,84 @@ p {
     .division .container .title p {
       margin-top: 20px; }
 
-.feedback h2 {
-  text-align: center; }
+.feedback {
+  position: relative; }
+  .feedback h2 {
+    text-align: center; }
+  .feedback .swiper-container {
+    width: 70%;
+    height: 150px;
+    margin: 90px auto;
+    border: 3px solid #EF4379;
+    border-radius: 26px; }
+    .feedback .swiper-container .swiper-wrapper .swiper-slide {
+      display: flex;
+      align-items: center; }
+      .feedback .swiper-container .swiper-wrapper .swiper-slide .avi {
+        height: 120px;
+        width: 120px;
+        margin-left: 15px; }
+        .feedback .swiper-container .swiper-wrapper .swiper-slide .avi img {
+          max-width: 100%;
+          max-height: 100%;
+          display: block; }
+      .feedback .swiper-container .swiper-wrapper .swiper-slide .comment {
+        width: calc(100% - 130px);
+        line-height: 1.5;
+        margin-left: 15px; }
+  .feedback .quotes {
+    position: absolute;
+    margin: 0 auto;
+    width: 60%;
+    top: 34%; }
+    .feedback .quotes span {
+      position: absolute;
+      display: block;
+      width: 60px;
+      height: 100px;
+      background-image: url(../assets/pictos/quote.svg);
+      background-size: contain;
+      background-repeat: no-repeat;
+      margin: 0 auto; }
+      .feedback .quotes span:first-child {
+        left: 0;
+        right: 35%; }
+      .feedback .quotes span:last-child {
+        left: 55%;
+        right: 0;
+        top: 150px; }
 
-.feedback .swiper-container {
-  width: 70%;
-  height: 150px;
-  margin: 90px auto;
-  border: 3px solid #EF4379;
-  border-radius: 26px; }
+.swiper-button-prev, .swiper-button-next {
+  outline: none;
+  top: 77%; }
+  .swiper-button-prev::after, .swiper-button-next::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-size: contain;
+    background-repeat: no-repeat; }
+
+.swiper-button-prev {
+  left: 20%; }
+  .swiper-button-prev::after {
+    background-image: url(../assets/pictos/arrow_prev.svg); }
+
+.swiper-button-next {
+  right: 20%; }
+  .swiper-button-next::after {
+    background-image: url(../assets/pictos/arrow_next.svg); }
+
+.swiper-pagination {
+  bottom: -40px;
+  left: 0;
+  right: 35%;
+  margin: 0 auto; }
+  .swiper-pagination span {
+    margin-left: 10px;
+    width: 15px;
+    height: 15px;
+    background-color: #EF4379; }
+    .swiper-pagination span:not(.swiper-pagination-bullet-active) {
+      background-color: #fff;
+      border: 1px solid #EF4379;
+      box-sizing: border-box; }
