--- a/css/sass/components/_default.scss
+++ b/css/sass/components/_default.scss
@@ -9,3 +9,9 @@ body {
     background-repeat: no-repeat;
     background-position: top center;
 }
+
+ul {
+    li {
+        list-style: none;
+    }
+}
