--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -10,3 +10,4 @@
 @import './components/divisions';
 @import './components/feedback';
 @import './components/swiper';
+@import './components/footer';
