--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -3,6 +3,7 @@
     background-color: #fff;
     box-sizing: border-box;
     cursor: pointer;
+    border: 1px solid $red;
 
     p, a {
         color: $red;
