--- a/css/sass/style.scss
+++ b/css/sass/style.scss
@@ -1,5 +1,5 @@
 @import './helpers/variables';
-@import './helpers/herlpers';
+@import './helpers/helpers';
 
 @import './components/default';
 @import './components/header';
