--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@
 .container {
   width: 60%;
   margin: 0 auto; }
+  @media screen and (max-width: 992px) {
+    .container {
+      width: 80%; } }
+  @media screen and (max-width: 798px) {
+    .container {
+      width: 90%; } }
 
 * {
   padding: 0;
@@ -12,6 +18,9 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top center; }
+  @media screen and (max-width: 798px) {
+    body {
+      background-image: url(../assets/img/bg_mobile.png); } }
 
 ul li {
   list-style: none; }
@@ -53,7 +62,38 @@ header {
       justify-content: space-between;
       align-items: center; }
       header .title .cta .btn {
-        width: 45%; }
+        width: 45%;
+        box-shadow: 0px 0px 42px 3px rgba(0, 0, 0, 0.15); }
+  @media screen and (max-width: 798px) {
+    header .logo {
+      width: 150px;
+      left: 0;
+      right: 0;
+      margin: 0 auto; }
+    header img.illustration {
+      width: 40%;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      top: 50%; }
+    header .title {
+      width: 90%;
+      margin: 0 auto;
+      text-align: center;
+      height: 100%;
+      position: relative;
+      justify-content: flex-start; }
+      header .title h1 {
+        margin-top: 150px; }
+      header .title .cta {
+        position: absolute;
+        bottom: 10px;
+        flex-direction: column;
+        width: 100%; }
+        header .title .cta .btn {
+          width: 70%; }
+          header .title .cta .btn:last-child {
+            margin-top: 30px; } }
 
 @font-face {
   font-family: "Impact";
@@ -78,7 +118,8 @@ p {
   border-radius: 100px;
   background-color: #fff;
   box-sizing: border-box;
-  cursor: pointer; }
+  cursor: pointer;
+  border: 1px solid #EF473A; }
   .btn p, .btn a {
     color: #EF473A;
     width: 100%;
