--- a/css/sass/helpers/_variables.scss
+++ b/css/sass/helpers/_variables.scss
@@ -4,5 +4,7 @@ $black: #232323;
 $gray: #D2D2D2;
 
 $gradient: linear-gradient(90deg, $red 0%, $pink 100%);
-
 $shadow: 0px 0px 42px 3px rgba(0, 0, 0, 0.15);
+
+$mobile: 798px;
+$tab: 992px;
