--- a/css/sass/components/_buttons.scss
+++ b/css/sass/components/_buttons.scss
@@ -12,6 +12,7 @@
         padding: 10px 0;
         text-decoration: none;
         display: block;
+        font-family: Raleway;
 
         &:visited {
             color: #fff;
