--- a/css/sass/components/_header.scss
+++ b/css/sass/components/_header.scss
@@ -54,7 +54,7 @@ header {
         }
     }
 
-    @media screen and (max-width: $mobile) {
+    @media screen and (max-width: $tab){
         .logo {
             width: 150px;
             left: 0;
@@ -64,16 +64,16 @@ header {
 
         img {
             &.illustration {
-                width: 40%;
+                width: 20%;
                 left: 0;
                 right: 0;
                 margin: 0 auto;
-                top: 50%
+                top: 40%;
             }
         }
 
         .title {
-            width: 90%;
+            width: 60%;
             margin: 0 auto;
             text-align: center;
             height: 100%;
@@ -86,7 +86,7 @@ header {
 
             .cta {
                 position: absolute;
-                bottom: 10px;
+                top: 60%;
                 flex-direction: column;
                 width: 100%;
 
@@ -97,6 +97,25 @@ header {
                         margin-top: 30px;
                     }
                 }
+            }
+        }
+    }
+
+    @media screen and (max-width: $mobile) {
+
+        img {
+            &.illustration {
+                width: 40%;
+                top: 50%;
+            }
+        }
+        
+        .title {
+            width: 90%;
+
+            .cta {
+                bottom: 10px;
+                top: auto;
             }
         }
     }
