--- a/css/sass/components/_fonts.scss
+++ b/css/sass/components/_fonts.scss
@@ -17,7 +17,19 @@ h1 {
 h2 {
     font-family: Impact;
     color: $black;
-    font-size: 22px;
+    font-size: 28px;
+}
+
+h3 {
+    font-family: Impact;
+    color: $pink;
+    font-size: 18px;
+
+    span {
+        font-family: Raleway;
+        color: $pink;
+        font-size: 12px;
+    }
 }
 
 p {
