--- a/css/sass/components/_footer.scss
+++ b/css/sass/components/_footer.scss
@@ -43,4 +43,15 @@ footer {
             }
         }
     }
+
+    @media screen and (max-width: $mobile) {
+        .container {
+            flex-direction: column;
+            align-items: center;
+
+            .wrapper {
+                width: 70%;
+            }
+        }
+    }
 }
