--- a/css/sass/components/_feedback.scss
+++ b/css/sass/components/_feedback.scss
@@ -21,10 +21,12 @@
                     height: 120px;
                     width: 120px;
                     margin-left: 15px;
+                    border-radius: 10px;
+                    overflow: hidden;
 
                     img {
-                        max-width: 100%;
-                        max-height: 100%;
+                        width: 100%;
+                        height: 100%;
                         display: block;
                     }
                 }
@@ -68,6 +70,7 @@
             background-size: contain;
             background-repeat: no-repeat;
             margin: 0 auto;
+            font-family: Impact;
 
             &:first-child {
                 left: 0;
