--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ h1 {
 h2 {
   font-family: Impact;
   color: #232323;
-  font-size: 28px; }
+  font-size: 32px; }
 
 h3 {
   font-family: Impact;
@@ -173,6 +173,7 @@ p {
       display: none; }
     .mockup > div .iphone {
       height: 600px;
+      max-width: 277px;
       width: 90%;
       margin: 0 auto;
       border-radius: 60px;
@@ -180,6 +181,14 @@ p {
       border: 1px solid #D2D2D2;
       overflow: hidden;
       background-color: #fff; }
+      .mockup > div .iphone img {
+        display: none;
+        height: 102%;
+        width: 102%;
+        margin-left: -1%;
+        margin-top: -1%; }
+        .mockup > div .iphone img.active {
+          display: block; }
     .mockup > div article {
       width: 85%;
       position: relative;
@@ -387,10 +396,12 @@ p {
       .feedback .swiper-container .swiper-wrapper .swiper-slide .avi {
         height: 120px;
         width: 120px;
-        margin-left: 15px; }
+        margin-left: 15px;
+        border-radius: 10px;
+        overflow: hidden; }
         .feedback .swiper-container .swiper-wrapper .swiper-slide .avi img {
-          max-width: 100%;
-          max-height: 100%;
+          width: 100%;
+          height: 100%;
           display: block; }
       .feedback .swiper-container .swiper-wrapper .swiper-slide .comment {
         width: calc(100% - 130px);
@@ -418,7 +429,8 @@ p {
       background-image: url(../assets/pictos/quote.svg);
       background-size: contain;
       background-repeat: no-repeat;
-      margin: 0 auto; }
+      margin: 0 auto;
+      font-family: Impact; }
       .feedback .quotes span:first-child {
         left: 0;
         right: 35%; }
